--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <p class="paragrafo">Fui selecionado pela minha classe</p>
 
-        <form action="">
+        <form action="" class="cadastro-form">
 
             <div>
                 <label for="">Nome:</label>
